--- a/app/assets/stylesheets/common/_buttons.css.sass
+++ b/app/assets/stylesheets/common/_buttons.css.sass
@@ -1,8 +1,5 @@
 @charset "utf-8"
 
-// BOX SHADOW params
-// +box-shadow( $color, $hoff, $voff, $blur, $spread, $inset )
-
 $btn_drop_shadow: ( hsla(0,0,0,0.6) 0 1px 1px 0 )
 $btn_inner_shadow: ( hsla(0, 0, 100, 0.25) 0 1px 0 inset )
 
@@ -20,10 +17,10 @@ $grad_btn_act: ( hsla(0,0,0,0.2), hsla(0,0,0,0.08) )
   margin: 0 20px 0 0
   padding: 0.5em 0.8em 0.7em
   border: 1px solid $slate_stroke
-  //+border-radius( 3px )
+  +border-radius( 3px )
   background-color: $color
-  //+background-image( linear-gradient( $grad_slate ))
-  //+box-shadow(( hsla(0, 0, 0, 0) 0 1px 2px ), ( hsla(0, 0, 100, 0.4) 0 1px 0px inset ))
+  +background-image( linear-gradient( $grad_slate ))
+  +box-shadow(( hsla(0, 0, 0, 0) 0 1px 2px ), ( hsla(0, 0, 100, 0.4) 0 1px 0px inset ))
   cursor: pointer
 
   text-align: center
@@ -34,11 +31,11 @@ $grad_btn_act: ( hsla(0,0,0,0.2), hsla(0,0,0,0.08) )
   //+single-text-shadow( $slate_shadow, 0px, 1px, 2px)
 
   &:hover
-    //+background-image( linear-gradient( $grad_slate_hover ))
+    +background-image( linear-gradient( $grad_slate_hover ))
 
   &:active
-    //+background-image( linear-gradient( $grad_slate_active ))
-    //+box-shadow(( hsla(0, 0, 0, 0) 0 1px 2px ), ( hsla(0, 0, 0, 0.4) 0 1px 2px inset ))
+    +background-image( linear-gradient( $grad_slate_active ))
+    +box-shadow(( hsla(0, 0, 0, 0) 0 1px 2px ), ( hsla(0, 0, 0, 0.4) 0 1px 2px inset ))
 
 
 button, input[type="submit"], a.button
@@ -59,12 +56,12 @@ button.cancel, a.button.cancel
     border: 1px solid $grey_4
     background-color: $white
     color: $error_red
-    //+box-shadow(( hsla(0, 0, 0, 0) 0 1px 2px ), ( hsla(0, 0, 0, 0.2) 0 1px 2px inset ))
+    +box-shadow(( hsla(0, 0, 0, 0) 0 1px 2px ), ( hsla(0, 0, 0, 0.2) 0 1px 2px inset ))
 
 
 /* Big ol' buttons */
 =call_to_action_button( $color: $yellow, $txt_color: $white )
-  //+button( $color )
+  +button( $color )
   padding: 0.25em 0.8em 0.25em
   border-color: $grey_primary
   +header_text
@@ -85,7 +82,7 @@ button.back_to, a.button.back_to
   display: block
   +spriteness( $image_path )
   background-color: transparent
-  //+box-shadow( none )
+  +box-shadow( none )
   cursor: pointer
 
 button.build_trunk, a.button.build_trunk
