Adjust layout. Add common javascript partial.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,37 +3,30 @@
 
   %head
     %title
-      = page_title @page[:title]
-    = render 'common/meta'
+      -#= page_title @page[:title]
+    -#= render 'common/meta'
 
     %link{ rel: "shortcut icon", href: "/favicon.ico" }
-    = stylesheet_link_tag 'simplesites', media: 'screen'
+    = stylesheet_link_tag 'application', media: 'screen'
     /[if IE]
       = stylesheet_link_tag 'ie', media: 'screen'
     -#= stylesheet_link_tag 'print', media: 'print'
     = csrf_meta_tag
 
-  %body{ class: layout_classes }
+  %body{ class: @page[:layout_classes].join(' ') }
     -#backdrop
     #page
 
       - unless suppressed?( 'stretch_header' )
         #stretch_header
           .content
-            = render 'common/header'
-        -#= yield :hero
+            -#= render 'common/header'
 
       #layout
         #page_content
           = yield
 
         #footer
-          = render 'common/footer'
-
-      - unless suppressed?( 'stretch_footer' )
-        #stretch_footer
-          %footer
-            .content
-              = render 'common/footer'
+          -#= render 'common/footer'
 
   = render 'common/javascript'
