Incorporate jQTouch styles/scripts

--- a/app/assets/stylesheets/_home.css.sass
+++ b/app/assets/stylesheets/_home.css.sass
@@ -1,14 +1,15 @@
-#page_content
-  background-color: $grey_6
+#jqt #home
 
+  li.place
+    .icon
+      width: 16px
+      float: left
+      position: relative
+      top: 4px
 
-.place.item
-  display: block
-  margin: 0 0 0.4em 0
-  padding: 0.4em 1.2em
-  background-color: $grey_5
-  border-radius: 4px
+      img
+        width: 16px
 
-  .icon
-    float: left
-    margin: 0 1em 0.2em 0
+    a
+      margin-left: 4px
+      +inline-block
