--- a/app/assets/stylesheets/screen.css.sass
+++ b/app/assets/stylesheets/screen.css.sass
@@ -1,6 +1,6 @@
 @import bourbon
-@import common/colors, common/typography, common/borders, common/images
-@import common/layout
-@import common/buttons 
+//@import common/colors, common/typography, common/borders, common/images
+//@import common/layout
+//@import common/buttons 
 //common/errors, common/messaging
 @import home
