--- a/app/assets/stylesheets/screen.css.sass
+++ b/app/assets/stylesheets/screen.css.sass
@@ -1,5 +1,6 @@
 @import bourbon
-//@import common/colors, common/typography, common/borders, common/images
+@import common/colors
+//common/typography, common/borders, common/images
 //@import common/layout
 //@import common/buttons 
 //common/errors, common/messaging
