--- a/app/views/google_places/place.html.haml
+++ b/app/views/google_places/place.html.haml
@@ -1,5 +1,24 @@
 - if ! @errors
-  = @place.inspect
+  .map
+    = static_google_map(@place.latlng, @place.latlng)
+
+  .info
+    %h2
+      = @place.name
+    .rating
+      = star_rating( @place.rating )
+
+    .contact
+      = @place.address
+      %br/
+      = @place.phone
+      %br/
+      = link_to @place.website if @place.website
+
+  .info.info_2
+    %button.button{disabled: true}
+      = @copy[:check_in]
+
 - else
-  .error_message{ 'data-test_id' => 'error_messaging' }
+  .info{ 'data-test_id' => 'error_messaging' }
     = @errors
