Hide first place item b/c too damn long

--- a/app/assets/stylesheets/_home.css.sass
+++ b/app/assets/stylesheets/_home.css.sass
@@ -7,6 +7,10 @@
     position: relative
     white-space: nowrap
 
+    // First result's name is problematically long ;-)
+    &:first-child
+      display: none
+
     .icon
       width: 16px
       float: left
