Disabled style for check-in button

--- a/app/assets/stylesheets/_home.css.sass
+++ b/app/assets/stylesheets/_home.css.sass
@@ -53,3 +53,9 @@
   .rating
     img
       opacity: 0.7
+
+  .button
+    padding-top: 0
+    background-color: $grey_5
+    border-color: $grey_3
+    color: $grey_4
